--- a/tsconfig-main.json
+++ b/tsconfig-main.json
@@ -1,13 +1,8 @@
 {
-    "compilerOptions": {
-      "target": "ES2022",
-      "module": "commonjs",
-      "moduleResolution": "node",
-      "strict": true,
-      "esModuleInterop": true,
-      "sourceMap": true,
-      "importHelpers": true,
-      "outDir": "build/main"
-    },
-    "include": ["src/main", "src/common"]
-  }
+  "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "module": "commonjs",
+    "outDir": "build/main"
+  },
+  "include": ["src/main", "src/common"]
+}
