--- a/tsconfig-renderer.json
+++ b/tsconfig-renderer.json
@@ -1,13 +1,8 @@
 {
-    "compilerOptions": {
-      "target": "ES2022",
-      "module": "ES2022",
-      "moduleResolution": "node",
-      "strict": true,
-      "esModuleInterop": true,
-      "sourceMap": true,
-      "importHelpers": true,
-      "outDir": "build/renderer"
-    },
-    "include": ["src/renderer/script", "src/common"]
-  }
+  "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "module": "ES2022",
+    "outDir": "build/renderer"
+  },
+  "include": ["src/renderer/script", "src/common"]
+}
